--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "postinstall": "patch-package"
+    "lint": "eslint"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.929.0",
     "@aws-sdk/s3-request-presigner": "^3.929.0",
-    "@langchain/core": "^0.3.79",
-    "@langchain/openai": "^0.3.17",
+    "@langchain/core": "^1.0.6",
+    "@langchain/openai": "^1.1.2",
     "@pinecone-database/pinecone": "^4.1.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -32,7 +31,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@vercel/postgres": "^0.10.0",
-    "better-auth": "1.4.0-beta.21",
+    "better-auth": "1.3.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -45,7 +44,7 @@
     "nanoid": "^5.1.6",
     "next": "^16.0.3",
     "next-themes": "^0.4.6",
-    "openai": "^4.104.0",
+    "openai": "^6.9.1",
     "pdf-parse": "^2.4.5",
     "postgres": "^3.4.7",
     "react": "^19.2.0",
@@ -54,7 +53,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5",
-    "zod": "^3.25.76"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -65,12 +64,10 @@
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "^16.0.3",
-    "patch-package": "^8.0.1",
-    "postinstall-postinstall": "^2.1.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
   "overrides": {
-    "zod": "^3.25.76"
+    "zod": "^4.1.12"
   }
 }
