--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.70.0",
     "@aws-sdk/client-s3": "^3.929.0",
     "@aws-sdk/s3-request-presigner": "^3.929.0",
+    "@google/generative-ai": "^0.24.1",
     "@langchain/core": "^1.0.6",
     "@langchain/openai": "^1.1.2",
     "@pinecone-database/pinecone": "^4.1.0",
