--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/postgres": "^0.10.0",
     "better-auth": "1.3.34",
@@ -49,10 +51,12 @@
     "next-themes": "^0.4.6",
     "openai": "^6.9.1",
     "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^3.11.174",
     "postgres": "^3.4.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
+    "react-pdf": "^9.1.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5",
