--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/page-navigation": "^3.12.0",
     "@react-pdf-viewer/zoom": "^3.12.0",
+    "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/postgres": "^0.10.0",
     "better-auth": "1.3.34",
