--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "drizzle-kit": "^0.31.6",
     "drizzle-orm": "^0.44.7",
@@ -61,6 +62,7 @@
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "react-pdf": "^9.1.1",
+    "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5",
