--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -202,7 +202,8 @@ jobs:
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
-        # Only install Chromium for CI, faster than all browsers
+        # Only install Chromium for CI (faster builds)
+        # Playwright config automatically runs only Chromium in CI environment
 
       - name: Run database migrations
         run: npm run db:migrate || npx drizzle-kit push || echo "No migrations found"
