--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,69 @@
+# ============================================
+# DocAI Environment Variables
+# ============================================
+# Copy this file to .env.local and fill in your values
+# cp .env.example .env.local
+
+# ============================================
 # Better-Auth (REQUIRED)
+# ============================================
+# Generate secret: openssl rand -base64 32
 BETTER_AUTH_SECRET=your-secret-key-here-generate-with-openssl-rand-base64-32
 BETTER_AUTH_URL=http://localhost:3000
 
+# ============================================
 # Database (REQUIRED)
+# ============================================
+# PostgreSQL connection string
+# Format: postgresql://user:password@host:port/database
 DATABASE_URL=postgresql://user:password@localhost:5432/docai
 
-# AI Services
+# ============================================
+# AI Services (At least one required)
+# ============================================
+# OpenAI API key for embeddings and GPT-4
 OPENAI_API_KEY=sk-...
+
+# Anthropic Claude API key
 ANTHROPIC_API_KEY=sk-ant-...
+
+# Google Gemini API key
 GOOGLE_AI_API_KEY=...
 
-# Vector Database
+# ============================================
+# Vector Database (REQUIRED)
+# ============================================
+# Pinecone API key
 PINECONE_API_KEY=your-pinecone-api-key
+
+# Pinecone environment/region
 PINECONE_ENVIRONMENT=us-east-1
+
+# Pinecone index name (create index with 1536 dimensions)
 PINECONE_INDEX=docai-index
 
-# AWS S3 (REQUIRED for file uploads)
+# ============================================
+# AWS S3 File Storage (REQUIRED)
+# ============================================
 AWS_ACCESS_KEY_ID=your-aws-access-key
 AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 AWS_REGION=us-east-1
 S3_BUCKET_NAME=your-bucket-name
 
-# Caching (REQUIRED for Week 4)
-UPSTASH_REDIS_URL=https://...
+# ============================================
+# Redis Caching (OPTIONAL but recommended)
+# ============================================
+# Upstash Redis URL
+UPSTASH_REDIS_URL=https://your-redis-instance.upstash.io
+
+# Upstash Redis token
 UPSTASH_REDIS_TOKEN=your-redis-token
 
-# Application
+# ============================================
+# Application Settings (OPTIONAL)
+# ============================================
+# Public app URL (for production)
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Node environment
+NODE_ENV=development
