--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-pdf": "^9.1.1",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
+    "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5",
     "zod": "^4.1.12"
